// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test in GiftExpertApp. should be  show a list categories 1`] = `
<Fragment>
  <h2>
    GifExpertApp 
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Naruto"
      key="Naruto"
    />
    <GifGrid
      category="Dragon"
      key="Dragon"
    />
  </ol>
</Fragment>
`;

exports[`test in GiftExpertApp. should be show the component 1`] = `
<Fragment>
  <h2>
    GifExpertApp 
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
